import("//build/config/android/rules.gni")


action("generate_merged_lint_suppression_file") {
  viv_suppress = "//vivaldi/android/vivaldi_suppressions.xml"
  chrome_suppress = "//build/android/lint/suppressions.xml"
  merged_suppress = "$root_gen_dir/vivaldi/android/merged_suppression.xml"
  script = "//vivaldi/scripts/merge_android_suppression.py"
  inputs = [
    script,
    viv_suppress,
    chrome_suppress,
  ]

  outputs = [
    merged_suppress,
  ]

  full_args = [
    viv_suppress,
    chrome_suppress,
    merged_suppress,
  ]
  args = rebase_path(full_args, root_build_dir)
}

# TODO(jarle): Temp. solution for thumbnail .pngs - make a pak file or smth.
android_assets("vivaldi_apk_assets") {
  sources = [
    "$root_out_dir/resources/vivaldi/default-bookmarks",
    "$root_out_dir/resources/vivaldi/prefs_definitions.json",
    "$root_out_dir/resources/vivaldi/resources/sd_abc.net.au.png",
    "$root_out_dir/resources/vivaldi/resources/sd_aliexpress.png",
    "$root_out_dir/resources/vivaldi/resources/sd_amazon.png",
    "$root_out_dir/resources/vivaldi/resources/sd_arstechnica.png",
    "$root_out_dir/resources/vivaldi/resources/sd_blick.png",
    "$root_out_dir/resources/vivaldi/resources/sd_booking.com.png",
    "$root_out_dir/resources/vivaldi/resources/sd_by_21vek.png",
    "$root_out_dir/resources/vivaldi/resources/sd_by_5element.png",
    "$root_out_dir/resources/vivaldi/resources/sd_by_citydog.png",
    "$root_out_dir/resources/vivaldi/resources/sd_by_naviny.png",
    "$root_out_dir/resources/vivaldi/resources/sd_by_onliner.png",
    "$root_out_dir/resources/vivaldi/resources/sd_by_tutby.png",
    "$root_out_dir/resources/vivaldi/resources/sd_de_aboutyou.png",
    "$root_out_dir/resources/vivaldi/resources/sd_de_bild.png",
    "$root_out_dir/resources/vivaldi/resources/sd_de_derstandard.png",
    "$root_out_dir/resources/vivaldi/resources/sd_de_focus.png",
    "$root_out_dir/resources/vivaldi/resources/sd_de_heise.png",
    "$root_out_dir/resources/vivaldi/resources/sd_de_idealo.png",
    "$root_out_dir/resources/vivaldi/resources/sd_de_spiegel.png",
    "$root_out_dir/resources/vivaldi/resources/sd_de_stern.png",
    "$root_out_dir/resources/vivaldi/resources/sd_de_urlaubsbox.png",
    "$root_out_dir/resources/vivaldi/resources/sd_de_web.de.png",
    "$root_out_dir/resources/vivaldi/resources/sd_de_welt.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ebay.png",
    "$root_out_dir/resources/vivaldi/resources/sd_en_GB_bbc.png",
    "$root_out_dir/resources/vivaldi/resources/sd_en_GB_theguardian.png",
    "$root_out_dir/resources/vivaldi/resources/sd_en_GB_thetelegraph.png",
    "$root_out_dir/resources/vivaldi/resources/sd_en_in_agoda.png",
    "$root_out_dir/resources/vivaldi/resources/sd_en_in_makemytrip.png",
    "$root_out_dir/resources/vivaldi/resources/sd_en_us_turbotax.png",
    "$root_out_dir/resources/vivaldi/resources/sd_es_abc.png",
    "$root_out_dir/resources/vivaldi/resources/sd_es_el_corte_inglees.png",
    "$root_out_dir/resources/vivaldi/resources/sd_es_elmundo.png",
    "$root_out_dir/resources/vivaldi/resources/sd_es_elpais.png",
    "$root_out_dir/resources/vivaldi/resources/sd_es_lavanguardia.png",
    "$root_out_dir/resources/vivaldi/resources/sd_es_marca.png",
    "$root_out_dir/resources/vivaldi/resources/sd_es_milanuncios.png",
    "$root_out_dir/resources/vivaldi/resources/sd_expedia.png",
    "$root_out_dir/resources/vivaldi/resources/sd_facebook.png",
    "$root_out_dir/resources/vivaldi/resources/sd_fr_01net.png",
    "$root_out_dir/resources/vivaldi/resources/sd_fr_begeek.png",
    "$root_out_dir/resources/vivaldi/resources/sd_fr_cdiscount.png",
    "$root_out_dir/resources/vivaldi/resources/sd_fr_fnac.png",
    "$root_out_dir/resources/vivaldi/resources/sd_fr_free.png",
    "$root_out_dir/resources/vivaldi/resources/sd_fr_leboncoin.png",
    "$root_out_dir/resources/vivaldi/resources/sd_fr_lefigaro.png",
    "$root_out_dir/resources/vivaldi/resources/sd_fr_lemonde.png",
    "$root_out_dir/resources/vivaldi/resources/sd_fr_lesechos.png",
    "$root_out_dir/resources/vivaldi/resources/sd_fr_lexpress.png",
    "$root_out_dir/resources/vivaldi/resources/sd_fr_nextinpact.png",
    "$root_out_dir/resources/vivaldi/resources/sd_fr_shein.png",
    "$root_out_dir/resources/vivaldi/resources/sd_groupon.png",
    "$root_out_dir/resources/vivaldi/resources/sd_habrahabr.png",
    "$root_out_dir/resources/vivaldi/resources/sd_help.png",
    "$root_out_dir/resources/vivaldi/resources/sd_in_cricbuzz.png",
    "$root_out_dir/resources/vivaldi/resources/sd_in_flipkart.png",
    "$root_out_dir/resources/vivaldi/resources/sd_in_indiatimes.png",
    "$root_out_dir/resources/vivaldi/resources/sd_in_makemytrip.png",
    "$root_out_dir/resources/vivaldi/resources/sd_in_ndtv.png",
    "$root_out_dir/resources/vivaldi/resources/sd_in_quora.png",
    "$root_out_dir/resources/vivaldi/resources/sd_is_dv.png",
    "$root_out_dir/resources/vivaldi/resources/sd_is_mbl.png",
    "$root_out_dir/resources/vivaldi/resources/sd_is_pressan.png",
    "$root_out_dir/resources/vivaldi/resources/sd_is_ruv.png",
    "$root_out_dir/resources/vivaldi/resources/sd_is_vb.png",
    "$root_out_dir/resources/vivaldi/resources/sd_is_vedur.png",
    "$root_out_dir/resources/vivaldi/resources/sd_is_visir.png",
    "$root_out_dir/resources/vivaldi/resources/sd_it_corrieredellasera.png",
    "$root_out_dir/resources/vivaldi/resources/sd_it_lagazzettadellosport.png",
    "$root_out_dir/resources/vivaldi/resources/sd_it_libero.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ja_his.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ja_itmedia.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ja_mainichi.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ja_nhk.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ja_recochoku.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ja_unext.png",
    "$root_out_dir/resources/vivaldi/resources/sd_kayak.png",
    "$root_out_dir/resources/vivaldi/resources/sd_lamoda.png",
    "$root_out_dir/resources/vivaldi/resources/sd_morele-net.png",
    "$root_out_dir/resources/vivaldi/resources/sd_nb_aftenposten.png",
    "$root_out_dir/resources/vivaldi/resources/sd_nb_dagbladet.png",
    "$root_out_dir/resources/vivaldi/resources/sd_nb_finn.png",
    "$root_out_dir/resources/vivaldi/resources/sd_nb_nrk.png",
    "$root_out_dir/resources/vivaldi/resources/sd_nb_vg.png",
    "$root_out_dir/resources/vivaldi/resources/sd_news.com.au.png",
    "$root_out_dir/resources/vivaldi/resources/sd_newyorktimes.png",
    "$root_out_dir/resources/vivaldi/resources/sd_no_bonprix.png",
    "$root_out_dir/resources/vivaldi/resources/sd_no_cdon.png",
    "$root_out_dir/resources/vivaldi/resources/sd_pl_allegro.png",
    "$root_out_dir/resources/vivaldi/resources/sd_pl_blablacar.png",
    "$root_out_dir/resources/vivaldi/resources/sd_pl_ceneo.png",
    "$root_out_dir/resources/vivaldi/resources/sd_pl_gazeta.png",
    "$root_out_dir/resources/vivaldi/resources/sd_pl_o2.png",
    "$root_out_dir/resources/vivaldi/resources/sd_pl_onet.png",
    "$root_out_dir/resources/vivaldi/resources/sd_pl_tvn24.png",
    "$root_out_dir/resources/vivaldi/resources/sd_pl_wp.png",
    "$root_out_dir/resources/vivaldi/resources/sd_pl_wyborcza.png",
    "$root_out_dir/resources/vivaldi/resources/sd_reddit.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ru_interfax.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ru_itkvariat.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ru_lenta.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ru_litres.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ru_ozon.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ru_pikabu.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ru_tass.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ru_tjournal.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ru_tutu.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ru_yandex.png",
    "$root_out_dir/resources/vivaldi/resources/sd_simplygames.png",
    "$root_out_dir/resources/vivaldi/resources/sd_spyr.png",
    "$root_out_dir/resources/vivaldi/resources/sd_startme.png",
    "$root_out_dir/resources/vivaldi/resources/sd_sv_sverigesradio.png",
    "$root_out_dir/resources/vivaldi/resources/sd_sv_svt.png",
    "$root_out_dir/resources/vivaldi/resources/sd_sv_yle.png",
    "$root_out_dir/resources/vivaldi/resources/sd_target.png",
    "$root_out_dir/resources/vivaldi/resources/sd_techcrunch.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ted.png",
    "$root_out_dir/resources/vivaldi/resources/sd_tr_cnnturk.png",
    "$root_out_dir/resources/vivaldi/resources/sd_tr_haberturk.png",
    "$root_out_dir/resources/vivaldi/resources/sd_tr_hurriyet.png",
    "$root_out_dir/resources/vivaldi/resources/sd_tr_milliyet.png",
    "$root_out_dir/resources/vivaldi/resources/sd_tr_ntv.png",
    "$root_out_dir/resources/vivaldi/resources/sd_tr_sahibinden.png",
    "$root_out_dir/resources/vivaldi/resources/sd_tr_yandex.png",
    "$root_out_dir/resources/vivaldi/resources/sd_tripadvisor.png",
    "$root_out_dir/resources/vivaldi/resources/sd_twitter.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ua_hcombined.png",
    "$root_out_dir/resources/vivaldi/resources/sd_ua_rozetka.png",
    "$root_out_dir/resources/vivaldi/resources/sd_uk_censornet.png",
    "$root_out_dir/resources/vivaldi/resources/sd_uk_interfax.png",
    "$root_out_dir/resources/vivaldi/resources/sd_uk_segodnya.png",
    "$root_out_dir/resources/vivaldi/resources/sd_uk_telegraph.png",
    "$root_out_dir/resources/vivaldi/resources/sd_vivaldi_community.gif",
    "$root_out_dir/resources/vivaldi/resources/sd_vivaldi.png",
    "$root_out_dir/resources/vivaldi/resources/sd_vk.png",
    "$root_out_dir/resources/vivaldi/resources/sd_webmail.png",
    "$root_out_dir/resources/vivaldi/resources/sd_wikipedia.png",
    "$root_out_dir/resources/vivaldi/resources/sd_worldtanks.png",
    "$root_out_dir/resources/vivaldi/resources/sd_youtube.png",
  ]
  deps = [
    "//vivaldi/vivapp:bookmarks",
    "//vivaldi/vivapp:prefs_definitions",
    "//vivaldi/vivapp:resources",
  ]
  disable_compression = true
}