
import("//chrome/android/java_sources.gni")

update_template_instance("//chrome/android:chrome_java") {
    java_files += [
     "//vivaldi/android/java/src/org/vivaldi/browser/VivaldiActionModeCallback.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/bookmarks/VivaldiBookmarkAddEditFolderActivity.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/bookmarks/VivaldiBookmarkEditActivity.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/bookmarks/VivaldiBookmarkManager.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/bookmarks/VivaldiBookmarksPageObserver.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/capture/CaptureHandler.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/common/DirectionalRecyclerView.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/common/FaviconHandler.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/common/ImageHandler.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/common/ScrollHandler.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/common/TemplateUrlServiceObserverHelper.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/common/ThumbnailHandler.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/common/VivaldiBookmarkUtils.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/common/VivaldiColorUtils.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/common/VivaldiScrollView.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/common/VivaldiTextInputLayout.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/common/VivaldiHorizontalRecyclerView.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/common/VivaldiUrlConstants.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/common/VivaldiUtils.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/compositor/layouts/LayoutManagerVivaldiTablet.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/downloads/VivaldiDownloadsManager.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/history/VivaldiHistoryManager.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NotesActionBar.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NoteAddEditFolderActivity.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NotesBridge.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NotesDelegate.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NoteEditActivity.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NoteEditText.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NoteFolderRow.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NoteFolderSelectActivity.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NoteId.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NoteItemsAdapter.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NoteItemRow.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NotesManager.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NotesModel.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NotesPageObserver.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NoteRow.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NoteSelectionPopupController.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NoteType.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NoteUIObserver.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NoteUIState.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NoteUtils.java",
#     "//vivaldi/android/java/src/org/vivaldi/browser/notes/NotesUndoController.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/ntp/VivaldiPrivateNewTabPage.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/ntp/VivaldiPrivateNewTabPageView.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/ntp/VivaldiRecentTabsManager.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/omnibox/status/SearchEngineIconHandler.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/panels/PanelActivity.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/panels/PanelAdapter.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/panels/PanelEnum.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/panels/PanelListener.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/panels/PanelManager.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/panels/PanelPage.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/panels/PanelPageProvider.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/panels/PanelSnapHelper.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/panels/PanelUtils.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/panels/PanelViewHolder.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/preferences/VivaldiAccountSettingsView.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/preferences/VivaldiManageSpaceActivity.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/preferences/VivaldiSyncActivity.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/preferences/VivaldiSyncPreference.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/preferences/VivaldiSyncSettingsView.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/preferences/VivaldiSyncHeaderView.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/preferences/VivaldiPreferences.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/ItemTouchHelperAdapter.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/SpeedDialAddEditFolderActivity.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/SpeedDialCard.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/SpeedDialDelegate.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/SpeedDialFolderManager.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/SpeedDialFolderPagesListener.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/SpeedDialFolderTabSnapHelper.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/SpeedDialFolderTabAdapter.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/SpeedDialFolderTabViewHolder.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/SpeedDialGridItemDecoration.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/SpeedDialItemCard.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/SpeedDialLaunchLocation.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/SpeedDialLayoutManager.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/SpeedDialMyOrderAdapter.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/SpeedDialPage.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/SpeedDialTopLevelManager.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/SpeedDialRecyclerView.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/SpeedDialUIState.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/speeddial/SpeedDialUtils.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/sync/VivaldiProfileSyncService.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/tasks/tab_management/TabSwitcherViewAdapter.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/tasks/tab_management/TabSwitcherViewHolder.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/tasks/tab_management/TabSwitcherListener.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/tasks/tab_management/TabSwitcherPagerSnapHelper.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/tasks/tab_management/TabSwitcherView.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/toolbar/BackButton.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/toolbar/DoneButton.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/toolbar/ForwardButton.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/toolbar/HorizontalTabSwitcherTabLayout.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/toolbar/PanelButton.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/toolbar/VivaldiTopToolbarCoordinator.java",
     "//vivaldi/android/java/src/org/vivaldi/browser/vivaldi_account_manager/VivaldiAccountManager.java",
   ]

   deps += [
       # "vivaldi/notes",
       #"//vivaldi/notes/android:notes_java"
     "//third_party/android_deps:android_support_v7_palette_java",
     #"//third_party/android_deps:android_support_v7_cardview_java",
   ]
}

update_template_instance("//chrome/android:chrome_jni_headers") {
   sources +=
    [
        "//vivaldi/android/java/src/org/vivaldi/browser/notes/NotesBridge.java",
        "//vivaldi/android/java/src/org/vivaldi/browser/notes/NoteId.java",
        "//vivaldi/android/java/src/org/vivaldi/browser/capture/CaptureHandler.java",
        "//vivaldi/android/java/src/org/vivaldi/browser/sync/VivaldiProfileSyncService.java",
        "//vivaldi/android/java/src/org/vivaldi/browser/vivaldi_account_manager/VivaldiAccountManager.java",
    ]
}

update_template_instance("//chrome/android:chrome_app_java_resources") {
  resource_dirs += [
    "//vivaldi/android/java/$VIVALDI_RELEASE_KIND/res",
    "//vivaldi/android/java/res",
    "//vivaldi/android/java/res_chromium",
  ]
  deps += [
    "//vivaldi/app:vivaldi_android_strings_grd"
  ]
}

update_template_instance("//chrome/android:chrome_public_apk_resources") {
  resource_dirs += [
    "//vivaldi/android/java/$VIVALDI_RELEASE_KIND/res_chromium",
    "//vivaldi/android/java/res_chromium",
  ]
}

update_template_instance("//chrome/android:chrome_public_android_manifest") {
   variables += [
     "min_sdk_version=21",
   ]
}

update_template_instance("//components/sync/android:sync_java") {
  java_files += [
    "//vivaldi/android/java/src/org/vivaldi/browser/sync/VivaldiSyncContentResolverDelegate.java",
  ]
}

#vivaldi_test_java_sources = [
#  "javatests/src/org/vivaldi/browser/compositor/CompositorVisibilityTest.java",
#]

#vivaldi_junit_test_java_sources = [
#  "junit/src/org/vivaldi/browser/AppIndexingUtilTest.java",
#]
