
post_process_template("//chrome:packed_resources") {
  if (!defined(additional_extra_paks)) {
    additional_extra_paks = []
  }
  additional_extra_paks += [
    "$root_gen_dir/vivaldi/vivaldi_native_unscaled.pak",
  ]
  if (!defined(public_deps)) { public_deps = [] }
  public_deps += [
    "//vivaldi/app:vivaldi_native_resources",
    "//vivaldi/app:vivaldi_native_strings",
    "//vivaldi/app:vivaldi_unscaled_native_resources",
  ]
}

post_process_template("//chrome:packed_resources_extra") {
  if (!defined(deps)) { deps = [] }
  deps += [
    "//vivaldi/app:vivaldi_unscaled_native_resources",
  ]
}


post_process_template("//chrome:packed_resources_locales") {
  if (!defined(additional_source_patterns)) {
    additional_source_patterns = []
  }
  additional_source_patterns += [ "$root_gen_dir/vivaldi/vivaldi_native_strings_" ]

  # Both deps and public_deps need to be updated; deps are used by subtargets
  if (!defined(deps)) { deps = [] }
  deps += [
    "//vivaldi/app:vivaldi_native_strings",
    "//vivaldi/app:vivaldi_unscaled_native_resources",
  ]
}

post_process_target("//chrome:resources") {
  public_deps += [
    "//vivaldi/app:resources",
    "//vivaldi/app:vivaldi_native_resources",
    "//vivaldi/app:vivaldi_native_strings",
    "//vivaldi/app:vivaldi_unscaled_native_resources",
  ]
}

post_process_template("//chrome/browser/extensions:extensions") {
  deps += [
    "//vivaldi/app:vivaldi_native_resources",
    "//vivaldi/app:vivaldi_unscaled_native_resources",
  ]
}

post_process_target("//chrome/common:non_code_constants") {
  deps += [
    "//components/version_info:generate_version_info",
  ]
}

post_process_target("//components/bookmarks/browser:browser") {
  deps += [
    #"//chrome:strings",
    "//vivaldi/app:vivaldi_native_strings",
    "//vivaldi/app:vivaldi_native_resources",
    "//vivaldi/app:vivaldi_unscaled_native_resources",
  ]
}

post_process_template("//components:components_tests_pak") {
  sources += [
    "$root_gen_dir/vivaldi/vivaldi_native_strings_en-US.pak"
  ]
  deps += [
    "//vivaldi/app:vivaldi_native_strings",
  ]
}

foreach(_target,
        [
          "//chrome:packed_resources_100_percent",
          "//chrome:packed_resources_200_percent",
        ]) {
  post_process_template(_target + "_repack") {
    # Keep this source update here for simplicity
    sources += [ "$root_gen_dir/vivaldi/vivaldi_native_resources_${percent}_percent.pak" ]
    deps += [ "//vivaldi/app:vivaldi_native_resources" ]
  }
}

foreach(_target, [
      "//chrome/app:chrome_dll_resources",
      "//chrome/app:chrome_exe_resources",
      "//chrome/installer/mini_installer:lib",
      "//chrome/installer/setup:setup",
    ]) {
  post_process_target(_target) {
    if (!defined(deps)) {
      deps = []
    }
    deps += ["//vivaldi/app:vivaldi_icon"]
    #configs += ["//vivaldi/app:vivaldi_app_config"]
  }
}