
update_template_instance("//chrome:packed_resources") {
  if (!defined(additional_extra_paks)) {
    additional_extra_paks = []
  }
  additional_extra_paks += [
    "$root_gen_dir/vivaldi/vivaldi_native_unscaled.pak",
  ]
  if (!defined(public_deps)) { public_deps = [] }
  public_deps += [
    "//vivaldi/app:vivaldi_native_resources",
    "//vivaldi/app:vivaldi_native_strings",
    "//vivaldi/app:vivaldi_unscaled_native_resources",
  ]
}

update_template_instance("//chrome:packed_resources_extra") {
  if (!defined(deps)) { deps = [] }
  deps += [
    "//vivaldi/app:vivaldi_unscaled_native_resources",
  ]
}


update_template_instance("//chrome:packed_resources_locales") {
  if (!defined(additional_source_patterns)) {
    additional_source_patterns = []
  }
  additional_source_patterns += [ "$root_gen_dir/vivaldi/vivaldi_native_strings_" ]

  # Both deps and public_deps need to be updated; deps are used by subtargets
  if (!defined(deps)) { deps = [] }
  deps += [
    "//vivaldi/app:vivaldi_native_strings",
    "//vivaldi/app:vivaldi_unscaled_native_resources",
  ]
}

update_target("//chrome:resources") {
  public_deps += [
    "//vivaldi/app:resources",
    "//vivaldi/app:vivaldi_native_resources",
    "//vivaldi/app:vivaldi_native_strings",
    "//vivaldi/app:vivaldi_unscaled_native_resources",
  ]
}

if (!is_android) {
  update_target("//chrome/browser/extensions:extensions") {
    deps += [
      "//vivaldi/app:vivaldi_native_resources",
      "//vivaldi/app:vivaldi_unscaled_native_resources",
    ]
  }
}

update_target("//chrome/common:non_code_constants") {
  deps += [
    "//components/version_info:generate_version_info",
  ]
}

update_target("//components/bookmarks/browser:browser") {
  deps += [
    #"//chrome:strings",
    "//vivaldi/app:vivaldi_native_strings",
    "//vivaldi/app:vivaldi_native_resources",
    "//vivaldi/app:vivaldi_unscaled_native_resources",
  ]
}

update_template_instance("//components:components_tests_pak") {
  sources += [
    "$root_gen_dir/vivaldi/vivaldi_native_strings_en-US.pak"
  ]
  deps += [
    "//vivaldi/app:vivaldi_native_strings",
  ]
}

_targets = [
  "//chrome:packed_resources_100_percent",
]

if (!is_android) {
  _targets += [
    "//chrome:packed_resources_200_percent",
  ]
}

foreach(_target, _targets) {
  update_template_instance(_target) {
    if (defined(source)) {
      # Keep this source update here for simplicity
      sources += [ "$root_gen_dir/vivaldi/vivaldi_native_resources_${percent}_percent.pak" ]
      deps += [ "//vivaldi/app:vivaldi_native_resources" ]
    }
  }
}

_targets = []
_targets = [
  "//chrome/app:chrome_dll_resources",
]

if (is_win) {
  _targets += [
    "//chrome/installer/mini_installer:lib",
    "//chrome/installer/setup:setup",
  ]
}

foreach(_target, _targets) {
  update_target(_target) {
    if (!defined(deps)) {
      deps = []
    }
    deps += ["//vivaldi/app:vivaldi_icon"]
    #configs += ["//vivaldi/app:vivaldi_app_config"]
  }
}